--- a/file_manager_config.json
+++ b/file_manager_config.json
@@ -1,5 +1,5 @@
 {
-    "log_file_path": "C:\\Users\\plane\\OneDrive\\Desktop\\ModFileManagement\\findthisfiles.txt",
+    "log_file_path": "C:\\Users\\plane\\OneDrive\\Desktop\\ModFileManagement\\Missingcookedfile.txt",
     "search_directory": "G:\\ConanExilesDevKit\\Games\\ConanSandbox\\Content\\Mods",
     "content_directory": "G:\\ConanExilesDevKit\\Games\\ConanSandbox\\Content\\Mods\\ExilesExtreme\\Content",
     "last_modified": "2024-11-06T18:22:24.846086",
