--- a/file_manager_config.json
+++ b/file_manager_config.json
@@ -1,9 +1,9 @@
 {
-    "log_file_path": "C:\\Users\\plane\\OneDrive\\Desktop\\ModFileManagement\\Missingcookedfile.txt",
+    "log_file_path": "C:\\Users\\plane\\OneDrive\\Desktop\\Sibercats_ModFileManagement\\Missingcookedfile.txt",
     "search_directory": "G:\\ConanExilesDevKit\\Games\\ConanSandbox\\Content\\Mods",
     "content_directory": "G:\\ConanExilesDevKit\\Games\\ConanSandbox\\Content\\Mods\\ExilesExtreme\\Content",
-    "last_modified": "2024-11-06T18:22:24.846086",
+    "last_modified": "2024-11-19T05:47:41.412267",
     "backup_directory": "",
     "file_extensions_filter": [],
-    "max_file_size": 0
+    "orphaned_file_threshold": 1024
 }
